# web/swagger/spec.json
@@ -122,6 +122,17 @@
                 "produces": [
                     "application/json"
                 ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "User",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "New user created"
@@ -248,6 +259,19 @@
                     "type": "integer"
                 },
                 "offset": {
+                    "type": "integer"
+                }
+            }
+        },
+        "User": {
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "rank": {
+                    "type": "string"
+                },
+                "military_id": {
                     "type": "integer"
                 }
             }
